# MClaw

./: .gitignore  ENV_SETUP.md  README.md  install_agentenv_uv_envs.sh  install_mclaw_envs.sh  integration_guide.md  plan.md  pyproject.toml  setup.py
envs/: agentenv-babyai-uv-freeze.txt  agentenv-babyai-uv.in  agentenv-lmrlgym-uv-freeze.txt  agentenv-lmrlgym-uv.in  agentenv-tool-weather-uv-freeze.txt  agentenv-tool-weather-uv.in  mclaw-envserver-freeze.txt  mclaw-train-freeze.txt
examples/: README.md  _run_agentenv_task_train.sh  run_babyai_train.sh  run_lmrlgym_maze_train.sh  run_lmrlgym_wordle_train.sh  run_textcraft_ray_train.sh  run_textcraft_train.sh  run_tool_weather_train.sh  smoke_test.sh  textcraft_train.sh
mclaw/: README.md  __init__.py
mclaw/adapters/: README.md  __init__.py  actor_backend.py  dataproto_adapter.py  env_client.py  inference_engine.py  logger.py  ref_policy.py  rollout_handler.py
mclaw/clustering/: README.md  __init__.py  action.py  base.py  hidden_state.py  logit_distribution.py  logprob.py  output_grad.py
mclaw/config/: README.md  __init__.py  mclaw_trainer.yaml
mclaw/core/: README.md  __init__.py  branch_selector.py  contracts.py  tree_node.py  tree_rollout.py
mclaw/critic/: README.md  __init__.py  advantage.py  q_critic.py  q_head.py
mclaw/trainer/: README.md  __init__.py  contracts.py  main.py  mclaw_trainer.py
mclaw/utils/: README.md  __init__.py  vllm_hooks.py
results/: README.md  hidden_state_ablation_status.md
results/20260405_root_audit_trainlike/: README.md  completion_summary.md  cross_task_metrics.json  cross_task_summary.md
results/20260405_root_audit_trainlike/babyai/: audit.command.txt  manual_review.md  summary.json
results/20260405_root_audit_trainlike/maze/: audit.command.txt  manual_review.md  summary.json
results/20260405_root_audit_trainlike/textcraft/: audit.command.txt  manual_review.md  summary.json
results/20260405_root_audit_trainlike/weather/: audit.command.txt  manual_review.md  summary.json
results/20260407_hidden_state_ablation/: README.md  combined_variant_overview.md  completion_summary.md
results/20260407_hidden_state_ablation/hidden_state_ablation_20260407_151231/: variant_metrics.json  variant_summary.md
results/20260407_hidden_state_ablation/hidden_state_ablation_20260407_151231/lneg1_last/: cross_task_metrics.json  cross_task_summary.md  variant.txt
results/20260407_hidden_state_ablation/hidden_state_ablation_20260407_151231/lneg2_last/: cross_task_metrics.json  cross_task_summary.md  variant.txt
results/20260407_hidden_state_ablation/hidden_state_ablation_remaining_20260407_184641/: variant_metrics.json  variant_summary.md
results/20260407_hidden_state_ablation/hidden_state_ablation_remaining_20260407_184641/lneg1_lastk4/: cross_task_metrics.json  cross_task_summary.md  variant.txt
results/20260407_hidden_state_ablation/hidden_state_ablation_remaining_20260407_184641/lneg1_lastk8/: cross_task_metrics.json  cross_task_summary.md  variant.txt
results/20260407_hidden_state_ablation/hidden_state_ablation_remaining_20260407_184641/lneg1_mean/: cross_task_metrics.json  cross_task_summary.md  variant.txt
results/20260407_hidden_state_ablation/hidden_state_ablation_remaining_20260407_184641/lneg2_lastk4/: cross_task_metrics.json  cross_task_summary.md  variant.txt
results/20260407_hidden_state_ablation/hidden_state_ablation_remaining_20260407_184641/lneg2_lastk8/: cross_task_metrics.json  cross_task_summary.md  variant.txt
results/20260407_hidden_state_ablation/hidden_state_ablation_remaining_20260407_184641/lneg2_mean/: cross_task_metrics.json  cross_task_summary.md  variant.txt
results/20260407_hidden_state_ablation/hidden_state_ablation_remaining_20260407_184641/lneg4_last/: cross_task_metrics.json  cross_task_summary.md  variant.txt
results/20260407_hidden_state_ablation/hidden_state_ablation_remaining_20260407_184641/lneg8_last/: variant.txt  (+2 more)
tests/: test_regressions.py
tools/: orchestrate_hidden_state_ablation.sh  orchestrate_trainlike_root_audit.sh  probe_agentenv_resets.py  render_manual_review_markdown.py  root_cluster_audit.py  run_hidden_state_ablation_tmux.sh  run_hidden_state_variant_task.sh  run_root_audit_task.sh  summarize_hidden_state_ablation.py  summarize_root_audit.py
(+80 files in other folders)
