[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mclaw"
version = "0.1.0"
description = "Monte-Carlo Tree Rollout for Agent RL"
requires-python = ">=3.10,<3.13"
dependencies = [
    "datasets==4.8.4",
    "numpy>=1.24.0",
    "omegaconf==2.3.0",
    "tensordict==0.6.2",
    "torch==2.6.0",
]

[project.scripts]
mclaw-train = "mclaw.trainer.main:main"

# ---------------------------------------------------------------------------
# Dependency groups (uv sync --group <name>)
# ---------------------------------------------------------------------------
# mclaw-train 环境: uv sync --group train
# mclaw-envserver 环境: uv sync --only-group envserver
# ---------------------------------------------------------------------------

[dependency-groups]
train = [
    "accelerate==1.13.0",
    "agentenv @ git+https://github.com/WooooDyy/AgentGym.git@640f8bca#subdirectory=agentenv",
    "datasets==4.8.4",
    "einops==0.8.2",
    # "flash-attn>=2.8.0",  # 手动安装预编译 wheel，见 ENV_SETUP.md
    "hydra-core==1.3.2",
    "omegaconf==2.3.0",
    "openai==2.30.0",
    "peft==0.18.1",
    "ray==2.54.1",
    "tensorboard==2.20.0",
    "tensordict==0.6.2",
    "tiktoken==0.12.0",
    "transformers==4.51.3",
    "vllm==0.8.5.post1",
    "wandb==0.25.1",
    "xformers==0.0.29.post2",
]
envserver = [
    "agentenv @ git+https://github.com/WooooDyy/AgentGym.git@640f8bca#subdirectory=agentenv",
    "agentenv-textcraft @ git+https://github.com/WooooDyy/AgentGym.git@640f8bca#subdirectory=agentenv-textcraft",
    "fastapi==0.135.2",
    "gymnasium==1.2.3",
    "openai==2.30.0",
    "torch==2.6.0",
    "transformers==5.4.0",
    "uvicorn==0.42.0",
]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.11.0",
]

[tool.hatch.build.targets.wheel]
packages = ["mclaw"]

[tool.uv]
index-strategy = "unsafe-best-match"
conflicts = [[
    { group = "train" },
    { group = "envserver" },
]]

[tool.uv.extra-build-dependencies]
flash-attn = ["torch"]

# torch 索引 (CUDA 12.4)
[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"

[tool.uv.sources]
torch = { index = "pytorch-cu124" }
